--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ shiny::runGitHub(repo = "wolfexplorer", username = "romunov")
 ```
 
 `*` you can install packages listed in the [`app.R`](https://github.com/romunov/wolfexplorer/blob/master/app.R#L1) using something along the lines of
-```r
+```{r echo = FALSE, comment = ""}
 x <- readLines("app.R")
 libs <- x[grepl("^library\\(.*\\)$", x)]
 libs <- gsub("^library\\((.*)\\)$", "\\1", libs)
